--- a/cifar_10_dense_net.ipynb
+++ b/cifar_10_dense_net.ipynb
@@ -29,102 +29,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b270d8-21de-4bd4-9660-ef446bf692b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# All common functions are imported from cifar_common\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "94a39d34-1234-4230-8c25-bed4cd57d602",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PreActResidualBlock(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, stride=1):\n",
+    "class DenseLayer(nn.Module):\n",
+    "    def __init__(self, in_channels, growth_rate):\n",
     "        super().__init__()\n",
-    "        self.bn1 = nn.BatchNorm2d(in_channels)\n",
-    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(in_channels)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
-    "\n",
-    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
-    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
-    "\n",
-    "        self.shortcut = nn.Identity()\n",
-    "        if stride != 1 or in_channels != out_channels:\n",
-    "            self.shortcut = nn.Sequential(\n",
-    "                nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=stride, padding=0, bias=False),\n",
-    "            )\n",
-    "\n",
-    "        # Dimensionality\n",
-    "        # [B, I, H, W] -- BatchNorm\n",
-    "        # [B, I, H, W] -- Relu\n",
-    "        # [B, O, H/2, W/2] -- Conv\n",
-    "        # [B, O, H/2, W/2] -- BatchNorm\n",
-    "        # [B, O, H/2, W/2] -- Relu\n",
-    "        # [B, O, H/2, W/2] -- Conv\n",
-    "        # [B, O, H/2, W/2] -- Shortcut\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        out = self.bn1(x)\n",
-    "        out = self.relu(out)\n",
-    "\n",
-    "        out = self.conv1(out)\n",
-    "        out = self.bn2(out)\n",
-    "        out = self.relu(out)\n",
-    "        out = self.conv2(out)\n",
+    "        self.conv1 = nn.Conv2d(in_channels, growth_rate, kernel_size=3, stride=1, padding=1, bias=False)\n",
     "        \n",
-    "        out += self.shortcut(x)\n",
+    "    def forward(self, x):\n",
+    "        out = self.bn(x)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.conv1(out)\n",
+    "        return out\n",
+    "\n",
+    "class DenseBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, growth_rate, num_layers):\n",
+    "        super().__init__()\n",
+    "        self.layers = []\n",
+    "        for i in range(num_layers):\n",
+    "            layer = DenseLayer(in_channels + i * growth_rate, growth_rate)\n",
+    "            self.layers.append(layer)\n",
+    "        self.layers = nn.ModuleList(self.layers)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        out = x\n",
+    "        for layer in self.layers:\n",
+    "            new = layer(out)\n",
+    "            out = torch.cat([out, new], dim = 1)\n",
+    "        return out\n",
+    "\n",
+    "class TransitionLayer(nn.Module):\n",
+    "    def __init__(self, in_channels, theta):\n",
+    "        super().__init__()\n",
+    "        self.bn = nn.BatchNorm2d(in_channels)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        self.conv = nn.Conv2d(in_channels, int(theta * in_channels), kernel_size=1, stride=1, padding=0, bias=False)\n",
+    "        self.avgpool = nn.AvgPool2d(kernel_size=2, stride=2)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = self.bn(x)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.conv(out)\n",
+    "        out = self.avgpool(out)\n",
     "        return out\n",
     "        \n",
-    "class ResNet(nn.Module):\n",
-    "    def __init__(self, num_classes):\n",
+    "\n",
+    "class DenseNet(nn.Module):\n",
+    "    def __init__(self, in_channels, theta, growth_rate, num_layers, num_classes):\n",
     "        super().__init__()\n",
+    "        self.conv = nn.Conv2d(3, in_channels, kernel_size=3, padding=1, stride=1, bias=False)\n",
+    "        self.db1 = DenseBlock(in_channels, growth_rate, num_layers)\n",
+    "        self.transition1 = TransitionLayer(in_channels + num_layers*growth_rate, theta)\n",
     "\n",
-    "        init_conv_channels = 32\n",
-    "        \n",
-    "        self.layer1 = nn.Sequential(\n",
-    "            PreActResidualBlock(in_channels=3, out_channels=init_conv_channels, stride=1),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels, stride=1)\n",
-    "        )\n",
+    "        out_channels_1 = int((in_channels + num_layers*growth_rate)*theta)\n",
     "\n",
-    "        self.layer2 = nn.Sequential(\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels, out_channels=init_conv_channels * 2, stride=2),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 2, stride=1)\n",
-    "        )\n",
-    "        # B, 3, 32, 32 -> B, 64, 16, 16\n",
-    "        \n",
-    "        self.layer3 = nn.Sequential(\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels * 2, out_channels=init_conv_channels * 4, stride=2),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1),\n",
-    "            PreActResidualBlock(in_channels=init_conv_channels * 4, out_channels=init_conv_channels * 4, stride=1)\n",
-    "        )\n",
-    "        \n",
-    "        self.bn = nn.BatchNorm2d(init_conv_channels * 4)\n",
+    "        self.db2 = DenseBlock(out_channels_1, growth_rate, num_layers)\n",
+    "        self.transition2 = TransitionLayer(out_channels_1 + num_layers*growth_rate, theta)\n",
+    "\n",
+    "        out_channels_2 = int((out_channels_1 + num_layers*growth_rate)*theta)\n",
+    "\n",
+    "        self.db3 = DenseBlock(out_channels_2, growth_rate, num_layers)\n",
+    "\n",
+    "        out_channels_3 = int((out_channels_2 + num_layers*growth_rate))\n",
+    "\n",
+    "        self.bn = nn.BatchNorm2d(out_channels_3)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
-    "        \n",
-    "        # B, 64, 16, 16 -> B, 128, 8, 8  \n",
-    "\n",
-    "        self.gap = nn.AdaptiveAvgPool2d(1)\n",
-    "\n",
-    "        self.fc = nn.Linear(init_conv_channels * 4, num_classes)\n",
+    "        self.pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        self.fc = nn.Linear(out_channels_3, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        out = self.layer1(x)\n",
-    "        out = self.layer2(out)\n",
-    "        out = self.layer3(out)\n",
-    "\n",
+    "        out = self.conv(x)\n",
+    "        out = self.db1(out)\n",
+    "        out = self.transition1(out)\n",
+    "        out = self.db2(out)\n",
+    "        out = self.transition2(out)\n",
+    "        out = self.db3(out)\n",
     "        out = self.bn(out)\n",
     "        out = self.relu(out)\n",
-    "        out = self.gap(out)\n",
-    "        out = out.reshape(out.size(0), -1)\n",
+    "        out = self.pool(out)\n",
+    "        out = out.view(out.size(0), -1)\n",
     "        out = self.fc(out)\n",
-    "        return out\n"
+    "        return out"
    ]
   },
   {
@@ -134,10 +123,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResNet(10)\n",
+    "model = DenseNet(in_channels=32, theta = 0.5, growth_rate = 12, num_layers = 6, num_classes = 10)\n",
     "model = model.to(DEVICE)\n",
     "num_epochs = 4\n",
-    "tracker = UpdateRatioTracker(log_every=100)\n",
+    "tracker = UpdateRatioTracker(log_every=00)\n",
     "\n",
     "# Reset BatchNorm running statistics to ensure fresh start\n",
     "# This is important if the model was previously trained or if you're re-running cells\n",
@@ -146,7 +135,7 @@
     "        m.reset_running_stats()\n",
     "\n",
     "model.train()  # Ensure model is in training mode\n",
-    "train_loader, test_loader = get_data(100, num_workers=8, prefetch_factor=8)\n",
+    "train_loader, test_loader = get_data(500, num_workers=8, prefetch_factor=8)\n",
     "criterion = nn.CrossEntropyLoss(label_smoothing=0.05)\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=0.1,  momentum=0.9, weight_decay=4e-4)\n",
     "scheduler = CosineAnnealingLR(optimizer, T_max=num_epochs, eta_min=1e-4)\n",
@@ -184,12 +173,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d74facd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate(model, test_loader, per_class_accuracy=True)\n",
+    "\n",
+    "# print optimizer current lr\n",
+    "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
+    "\n",
+    "losses[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05aa5a12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker.history\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -210,21 +212,6 @@
     "\n",
     "\n",
     "plot_update_ratios(tracker, list(tracker.history.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d74facd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate(model, test_loader, per_class_accuracy=True)\n",
-    "\n",
-    "# print optimizer current lr\n",
-    "print(f\"Current learning rate: {optimizer.param_groups[0]['lr']}\")\n",
-    "\n",
-    "losses[0:10]"
    ]
   },
   {
